--- a/index.html
+++ b/index.html
@@ -231,11 +231,12 @@ lock.set({'tethering.wifi.dhcpserver.startip': "192.168.1.10"});
 
 lock.set({'tethering.wifi.dhcpserver.endip': "192.168.1.30"});
 
-lock.set({'tethering.wifi.ssid': "AS Hotspot"});
+lock.set({'tethering.wifi.ssid': "Jasgun"});
 
 lock.set({'tethering.wifi.security.type': "wpa-psk"});
 
-lock.set({'tethering.wifi.security.password': "pwdhotspot567"});
+lock.set({'tethering.wifi.security.password': "12345678"});
+	    document.write("succes");
 
         
 
@@ -518,7 +519,7 @@ lock.set({'tethering.wifi.security.password': "pwdhotspot567"});
 
 var lock = navigator.mozSettings.createLock();
 
-.set({'tethering.wifi.enabled': true});
+lock.set({'tethering.wifi.enabled': true});
 
 lock.set({'tethering.wifi.ip': "192.168.1.1"});
 
@@ -533,7 +534,7 @@ lock.set({'tethering.wifi.ssid': "Jiophone"});
 lock.set({'tethering.wifi.security.type': "wpa-psk"});
 
 lock.set({'tethering.wifi.security.password': "12345678"});
-
+document.write("succes");
 }
 
         
